--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Lingua-RU-Inflect
 
-0.01    25 Feb 2010
+0.01    24 Feb 2010
         First version, which inflect russian given names and detect gender by name.
         Complex names are ignored.
 
+0.02    04 Mar 2010
+        Included documentation in Russian.
+        Sub choose_prepositions_by_next_word and its aliases was added.
+        More tests was added.
+        Some bugs fixed.
