--- a/RU/Lingua/RU/Inflect.pod
+++ b/RU/Lingua/RU/Inflect.pod
@@ -6,15 +6,18 @@ Lingua::RU::Inflect - Склоняет русские имена
 
 =head1 ВЕРСИЯ
 
-Версия 0.02
+Версия 0.04
 
 =head1 ОПИСАНИЕ
 
 L<Lingua::RU::Inflect> — модуль perl, предоставляющий ряд
 функций для русского языка: склонение имён (а также некоторых
-нарицательных существительных и прилагательных), определение пола по
-имени, а также выбор правильной формы предлога с беглой гласной в
-зависимости от следующего за ним слова.
+нарицательных существительных и прилагательных)
+и определение пола по имени.
+
+Добавленные в версии 0.02 функции выбора правильной формы
+предлога с беглой гласной в зависимости от следующего за ним слова
+НЕ РЕКОМЕНДУЕТСЯ использовать — они перенесены в L<Lingua::RU::Preposition>.
 
 Пример использования:
 
@@ -128,6 +131,9 @@ C<PREPOSITIONAL> для именительного, родительного, д
 
 =head2 choose_preposition_by_next_word
 
+НЕ РЕКОМЕНДУЕТСЯ использовать —
+функция и её псевдонимы перенесены в L<Lingua::RU::Preposition>.
+
 Выбирает предлог с беглой гласной (например, о/об/обо) по следующему за
 ним слову.
 
@@ -136,7 +142,9 @@ C<PREPOSITIONAL> для именительного, родительного, д
 Допустимые I<предлоги>: C<'в'>, C<'из'>, C<'к'>, C<'над'>, C<'о'>, C<'от'>,
 C<'пред'>, C<'перед'>, C<'под'> и C<'с'>.
 
-Для вызова функции с допустимыми предлогами задан ряд псевдонимов. Имена псевдонимов образованы от полных вариантов (чтобы избежать использования однобуквенных идентификаторов) за исключением C<ob>:
+Для вызова функции с допустимыми предлогами задан ряд псевдонимов.
+Имена псевдонимов образованы от полных вариантов (чтобы избежать
+использования однобуквенных идентификаторов) за исключением C<ob>:
 
 =head3 izo
 
@@ -239,6 +247,10 @@ L<http://cpanratings.perl.org/d/Lingua-RU-Inflect>
 
 L<http://search.cpan.org/dist/Lingua-RU-Inflect/>
 
+=item * Публичный репозиторий на github
+
+L<https://github.com/shoorick/lingua-ru-inflect>
+
 =back
 
 =head1 СМ. ТАКЖЕ
@@ -247,7 +259,7 @@ L<http://www.imena.org/declension.html>
 
 =head1 АВТОР
 
-Александр Сапожников L<http://shoorick.ru/>
+Александр Сапожников L<http://shoorick.ru/> L<< E<lt>shoorick@cpan.orgE<gt> >>
 
 =head1 ЛИЦЕНЗИЯ
 
