--- a/README
+++ b/README
@@ -2,10 +2,11 @@ Lingua-RU-Inflect
 
 Lingua::RU::Inflect is a perl module
 that provides Russian linguistic procedures
-such as declension of given names (with some nouns and adjectives too),
-gender detection by given name
-and choosing of proper forms of varying prepositions
-(deprecated, moved to Lingua::RU::Preposition).
+such as declension of given names (with some nouns and adjectives too)
+and gender detection by given name.
+
+Note: choosing of proper forms of varying prepositions
+was moved to Lingua::RU::Preposition.
 
 INSTALLATION
 
@@ -42,7 +43,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2009-2012 Alexander Sapozhnikov
+Copyright (C) 2009-2014 Alexander Sapozhnikov
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
